--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,10 +1,9 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
-We successfully developed and externally validated a model for predicting upgrading-risk~\citep{bruinsma2017expert}, and providing risk-based personalized biopsy decisions, in prostate cancer AS.
-Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, our model was fitted to the world's largest AS dataset PRIAS and externally validated in the largest six cohorts of the Movember Foundation's GAP3 database~\citep{gap3_2018}. Second, the model predicts a patient's current and future upgrading-risk in a dynamic and personalized manner. Third, we use the risks to make a personalized schedule, and also calculate expected time delay in detecting upgrading (less is beneficial) if that schedule is followed. Thus, patients/doctors can compare schedules before making a choice. Fourth, we implemented our methodology in a user-friendly web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for PRIAS and validated cohorts.
+We successfully developed and externally validated a model for predicting upgrading-risk~\citep{bruinsma2017expert} in prostate cancer AS, and providing risk-based personalized biopsy decisions. Our work has four novel features over earlier risk calculators~\citep{coley2017prediction,ankerst2015precision}. First, our model was fitted to the world's largest AS dataset PRIAS and externally validated in the largest six cohorts of the Movember Foundation's GAP3 database~\citep{gap3_2018}. Second, the model predicts a patient's current and future upgrading-risk in a personalized manner. Third, we use the risks to make a personalized schedule, and to also calculate expected time delay in detecting upgrading (less is beneficial) if that schedule is followed. Thus, patients/doctors can compare schedules before making a choice. Fourth, we implemented our methodology in a user-friendly web-application (\url{https://emcbiostatistics.shinyapps.io/prias_biopsy_recommender/}) for PRIAS and validated cohorts.
 
-Our PRIAS based model is useful for a large number of patients from the PRIAS and the following validation cohorts: University of California San Francisco AS (UCSF), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS, King's College London AS (KCL), and Michigan Urological Surgery Improvement Collaborative AS (MUSIC). The model had a moderate time-dependent AUC (0.55--0.75), a measure of discrimination, in all validation cohorts. The moderate AUC can be explained by the fact that, unlike the standard AUC~\citep{steyerberg2010assessing}, the time-dependent AUC utilizes only the validation data available until the time at which it is calculated. The same holds for the time-dependent MAPE (mean absolute prediction error), although it varied much more between cohorts than AUC. It was moderate in cohorts where the effect size for impact of PSA value and velocity on upgrading-risk was similar to that for PRIAS (e.g., Hopkins cohort). Otherwise, as in the case of KCL or MUSIC cohorts, the MAPE was large. In all cohorts, MAPE decreased rapidly after year one of follow-up. This may be explained by the fact at year one the validation data also consists of those patients who may have been misclassified incorrectly as Gleason grade group~1 at the time of inclusion in AS. Last, we required recalibration of our model's baseline hazard of upgrading, individually for all validation cohorts.
+Our model is useful for a large number of patients from PRIAS and validated cohorts. Across these cohorts, our model had a moderate time-dependent AUC (0.55--0.75), a measure of discrimination. The moderate AUC can be explained by the fact that, unlike the standard AUC~\citep{steyerberg2010assessing}, the time-dependent AUC utilizes only the validation data available until the time at which it is calculated. The same holds for the time-dependent MAPE (mean absolute prediction error), although it varied much more between cohorts than AUC. It was moderate in cohorts where the effect size for impact of PSA value and velocity on upgrading-risk was similar to that for PRIAS (e.g., Hopkins cohort). Otherwise, as in the case of KCL or MUSIC cohorts, the MAPE was large. In all cohorts, MAPE decreased rapidly after year one of follow-up. This may be explained by the fact at year one the validation data also consists of those patients who may have been misclassified incorrectly as Gleason grade group~1 at the time of inclusion in AS. The currently practiced compulsory biopsy at year one of follow-up for all patients may obviate this issue. Last, we required recalibration of our model's baseline hazard of upgrading for all validation cohorts.
 
-The clinical implications of our work are as follows. First, the cause-specific cumulative upgrading-risk at year five of follow-up was at most 50\% in all cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). That is, many patients may not require every biopsy they receive in the first five years of AS. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider upgrading-risk based personalized schedules instead. An additional advantage of personalized schedules is that they update as more patient data becomes available over follow-up. We have shown via a simulation study~\citep{tomer2019personalized} that personalized schedules may reduce up to a median of six biopsies compared to annual schedule, and a median of two biopsies compared to PRIAS schedule in slow/non-progressing AS patients, while maintaining almost the same time delay in detection of progression as PRIAS schedule. Personalized schedules with different risk thresholds indeed have different performance. In this regard, to assist patients/doctors in choosing between various personalized, and fixed schedules, the web-application provides a patient-specific estimate of expected time delay in detecting upgrading, for following both personalized and fixed schedules. We hope that this will objectively address patient apprehensions regarding adverse outcomes in AS.
+The clinical implications of our work are as follows. First, the cause-specific cumulative upgrading-risk at year five of follow-up was at most 50\% in all cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). That is, many patients may not require all biopsies planned in the first five years of AS. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider upgrading-risk based personalized schedules instead. An additional advantage of personalized schedules is that they update as more patient data becomes available over follow-up. We have shown via a simulation study~\citep{tomer2019personalized} that personalized schedules may reduce on average six biopsies compared to annual schedule and two biopsies compared to PRIAS schedule in slow/non-progressing AS patients, while maintaining almost the same time delay in detecting progression as PRIAS schedule. Personalized schedules with different risk thresholds indeed have different performance. In this regard, to assist patients/doctors in choosing between various personalized, and fixed schedules, the web-application provides a patient-specific estimate of expected time delay in detecting upgrading, for both personalized and fixed schedules. We hope that this will objectively address patient apprehensions regarding adverse outcomes in AS.
 
-This work has certain limitations. Predictions for upgrading-risk and personalized schedules are available only for a currently limited, cohort-specific, follow-up period (Table 7, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. Along with PSA, in some cohorts recently, MRI is also used to explore the possibility of targeting visible tumor by biopsy. However, the utility of MRI can only be determined with more follow-up data in the future. Subsequently, MRI data can also be added as a predictor in our model. Decisions based on information combined from both MRI and PSA can potentially improve the currently developed model. We scheduled biopsies using cause-specific cumulative upgrading-risk. Accounting for competing events, such as treatment based on the number of positive biopsy cores, may lead to improved personalized biopsy decisions. Although, in this work, we did not consider such additional triggers for treatment because, unlike upgrading, they differ between cohorts~\citep{nieboer2018active}. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
+This work has certain limitations. Predictions for upgrading-risk and personalized schedules are available only for a currently limited, cohort-specific, follow-up period (Table 7, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. Recently, some cohorts utilize MRI to explore the possibility of targeting visible lesions by biopsy. Currently GAP3 database has limited MRI follow-up data available. As more such data becomes available, the current model can be extended to include MRI based predictors. We scheduled biopsies using cause-specific cumulative upgrading-risk. Accounting for competing events, such as treatment based on the number of positive biopsy cores, may lead to improved personalized biopsy decisions. Although, in this work, we did not consider such additional triggers for treatment because, unlike upgrading, they differ between cohorts~\citep{nieboer2018active}. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
