--- a/report/clinical/supplementary/B_risk_prediction_validation.tex
+++ b/report/clinical/supplementary/B_risk_prediction_validation.tex
@@ -1,21 +1,20 @@
 % !TEX root =  ../supplementary.tex
 \section{Risk Predictions for Upgrading}
 \label{sec:param_estimates_jm_fit_prias}
-Let us assume a new patient $j$, for whom we need to estimate the upgrading-risk. Let his current follow-up visit time be $s$, latest time of biopsy be $t$, observed vector PSA measurements be $\mathcal{Y}_{j}(s)$. The combined information from the observed data about the time of upgrading, is given by the following posterior predictive distribution $g(T^*_j)$ of his time $T^*_j$ of upgrading:
+Let us assume a new patient $j$, for whom we need to estimate the upgrading-risk. Let his current follow-up visit time be $v$, latest time of biopsy be $t$, observed vector PSA measurements be $\mathcal{Y}_{j}(v)$. The combined information from the observed data about the time of upgrading, is given by the following posterior predictive distribution $g(T^*_j)$ of his time $T^*_j$ of upgrading:
 \begin{equation*}
 \label{eq:post_pred_dist}
 \begin{aligned}
-g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}\\
-&= \int \int p\big(T^*_j \mid T^*_j > t, \boldsymbol{b}_j, \boldsymbol{\theta}\big)\\
-& \quad \times p\big\{\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_{j}(s), \boldsymbol{\theta}\big\}p\big(\boldsymbol{\theta} \mid \mathcal{D}_n\big) \mathrm{d} \boldsymbol{b}_j \mathrm{d} \boldsymbol{\theta}.
+g(T^*_j) &= p\big\{T^*_j \mid T^*_j > t, \mathcal{Y}_{j}(v), \mathcal{A}_n\big\}\\
+&= \int \int p\big(T^*_j \mid T^*_j > t, \boldsymbol{b}_j, \boldsymbol{\theta}\big) p\big\{\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_{j}(v), \boldsymbol{\theta}\big\}p\big(\boldsymbol{\theta} \mid \mathcal{A}_n\big) \mathrm{d} \boldsymbol{b}_j \mathrm{d} \boldsymbol{\theta}.
 \end{aligned}
 \end{equation*}
-The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(s)$, but also depends on the information from the PRIAS dataset $\mathcal{D}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, majority of the prostate cancer patients may not obtain upgrading in the current follow-up period of PRIAS (thirteen years), $g(T^*_j)$ can only be estimated for a currently limited follow-up period.
+The distribution $g(T^*_j)$ depends not only depends on the observed data of the patient $T^*_j > t, \mathcal{Y}_{j}(v)$, but also depends on the information from the PRIAS dataset $\mathcal{A}_n$. To this the the posterior distribution of random effects $\boldsymbol{b}_j$ and posterior distribution of the vector of all parameters $\boldsymbol{\theta}$ are utilized, respectively. The distribution $g(T^*_j)$ can be estimated as detailed in \citet{rizopoulos2017dynamic}. Since, many prostate cancer patients may not obtain upgrading in the current follow-up period of PRIAS, $g(T^*_j)$ can only be estimated for a currently limited follow-up period.
 
 The cause-specific cumulative upgrading-risk can be derived from $g(T^*_j)$ as given in~\citep{rizopoulos2017dynamic}. It is given by:
 \begin{equation}
 \label{eq:dynamic_risk_prob}
-R_j(u \mid t,s) = \mbox{Pr}\big\{T^*_j > u \mid T^*_j > t, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}, \quad u \geq t.
+R_j(u \mid t, v) = \mbox{Pr}\big\{T^*_j > u \mid T^*_j > t, \mathcal{Y}_{j}(v), \mathcal{A}_n\big\}, \quad u \geq t.
 \end{equation}
 The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynrisk_plot_102}) updates as more data is gathered over follow-up visits. 
 
@@ -30,9 +29,9 @@ The personalized risk profile of the patient (see Panel~C, Figure~\ref{fig:dynri
 We wanted to check the usefulness of our model for not only the PRIAS patients but also for patients from other cohorts. To this end, we validated our model in the PRIAS dataset (internal validation) and in largest six cohorts from the GAP3 database~\citep{gap3_2018}. These are the University of Toronto AS (Toronto), Johns Hopkins AS (Hopkins), Memorial Sloan Kettering Cancer Center AS (MSKCC), University of California San Francisco Active Surveillance (UCSF), King's College London AS (KCL), Michigan Urological Surgery Improvement Collaborative AS (MUSIC).
 
 \textbf{\textit{Calibration-in-the-large}}
-We first assessed calibration-in-the-large~\citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cause-specific cumulative upgrading-risk for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cause-specific cumulative upgrading-risk. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate~\citep{turnbull1976empirical} of the cause-specific cumulative upgrading-risk in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the joint model fitted to the PRIAS dataset, individually for each of these cohorts. More specifically, given the data of an external cohort $\mathcal{D}_n^c$, where $c$ denotes the cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (\ref{sec:jm_framework}) of the log baseline hazard are given by:
+We first assessed calibration-in-the-large~\citep{steyerberg2010assessing} of our model in the aforementioned cohorts. To this end, we used our model to predict the cause-specific cumulative upgrading-risk for each patient given their PSA measurements and biopsy results. We then averaged the resulting profiles of cause-specific cumulative upgrading-risk. Subsequently we compared the averaged cumulative-risk profile with a non-parametric estimate~\citep{turnbull1976empirical} of the cause-specific cumulative upgrading-risk in each of the cohorts. The results are shown in Panel~A of Figure~\ref{fig:calib_before_after}. We can see that our model's calibration is fine only in PRIAS and Hopkins cohorts. To improve our model's calibration in KCL, MUSIC, Toronto, and MSKCC cohorts, we recalibrated the baseline hazard of the joint model fitted to the PRIAS dataset, individually for each of these cohorts. More specifically, given the data of an external cohort $\mathcal{A}_n^c$, where $c$ denotes the cohort, the recalibrated parameters $\boldsymbol{\gamma}_{h0}^c$ (\ref{sec:jm_framework}) of the log baseline hazard are given by:
 \begin{equation}
-p(\boldsymbol{\gamma}_{h0}^c \mid \mathcal{D}_n^c, \boldsymbol{b^c},  \boldsymbol{\theta}) \propto  \prod_{i=1}^{n^c} p(l_i^c, r_i^c \mid \boldsymbol{b^c_i}, \boldsymbol{\theta}) p(\boldsymbol{\gamma}_{h0}^c)
+p(\boldsymbol{\gamma}_{h0}^c \mid \mathcal{A}_n^c, \boldsymbol{b^c},  \boldsymbol{\theta}) \propto  \prod_{i=1}^{n^c} p(l_i^c, r_i^c \mid \boldsymbol{b^c_i}, \boldsymbol{\theta}) p(\boldsymbol{\gamma}_{h0}^c)
 \end{equation}
 where $n^c$ are the number of patients in the $c$-th cohort and $\boldsymbol{\theta}$ are the parameters of the joint model fitted to the PRIAS dataset. The interval in which upgrading is observed for the $i-th$ patient is given by $l_i^c, r_i^c$, with $r_i^c = \infty$ for right censored patients. The symbol $\boldsymbol{b^c_i}$ denotes patient-specific random effects (\ref{sec:jm_framework}). The random effects are obtained using the joint model fitted to the PRIAS dataset prior to recalibration. We re-evaluated the calibration-in-the-large of our model after the recalibration of the baseline hazard individually for each cohort. The improved calibration-in-the-large is shown in Panel~B of Figure~\ref{fig:calib_before_after}.
 
@@ -56,7 +55,7 @@ We wanted to check if our recalibrated PRIAS model performed as good as a new jo
 \textbf{\textit{Validation of Dynamic Cumulative-Risk Predictions}}
 As shown in Figure~\ref{fig:dynrisk_plot_102} the cumulative-risk predictions from the joint model are dynamic in nature. That is, they update as more data becomes available over time. Consequently, the discrimination and calibration of the joint model also depends on the available data. We assessed these two measures dynamically in the PRIAS cohort (interval validation) and in the largest six external cohorts that are part of the GAP3 database. For discrimination we utilized the time-varying area under the receiver operating characteristic curve or time-varying AUC~\citep{rizopoulos2017dynamic}. For time-varying calibration we assessed the mean absolute prediction error or MAPE~\citep{rizopoulos2017dynamic}. The AUC indicates how well the model discriminates between patients who experience upgrading and those do not. The MAPE indicates how accurately the model predicts upgrading. Both AUC and MAPE are restricted to $[0,1]$. However, it is preferred that AUC $>$ 0.5 because an AUC $\leq$ 0.5 indicates that the model performs worse than random discrimination. Ideally MAPE should be 0.
 
-We calculate AUC and MAPE in a time-dependent manner. More specifically, given the time of latest biopsy $t$, and history of PSA measurements up to time $s$, we calculate AUC and MAPE for a medically relevant time frame $(t, s]$, within which the occurrence of upgrading is of interest. In the case of prostate cancer, at any point in time $s$ it is of interest to identify patients who may have experienced upgrading in the last one year $(s-1, s]$. That is we set $t=s-1$. We then calculate AUC and MAPE at a gap of every six months (follow-up schedule of PRIAS). That is, $s \epsilon \{1, 1.5, \ldots \}$ years. To obtain reliable estimates of AUC and MAPE, in each cohort we restrict $s$ to a maximum time point $s_{\mbox{max}}$, such that there are at least 10 patients who experience upgrading after $s_{\mbox{max}}$. This maximum time point $s_{\mbox{max}}$ differs between cohorts, and is given in Table~\ref{tab:max_pred_time}.
+We calculate AUC and MAPE in a time-dependent manner. More specifically, given the time of latest biopsy $t$, and history of PSA measurements up to time $v$, we calculate AUC and MAPE for a medically relevant time frame $(t, v]$, within which the occurrence of upgrading is of interest. In the case of prostate cancer, at any point in time $v$ it is of interest to identify patients who may have experienced upgrading in the last one year $(v-1, v]$. That is we set $t=v-1$. We then calculate AUC and MAPE at a gap of every six months (follow-up schedule of PRIAS). That is, $v \epsilon \{1, 1.5, \ldots \}$ years. To obtain reliable estimates of AUC and MAPE, in each cohort we restrict $v$ to a maximum time point $v_{\mbox{max}}$, such that there are at least 10 patients who experience upgrading after $v_{\mbox{max}}$. This maximum time point $v_{\mbox{max}}$ differs between cohorts, and is given in Table~\ref{tab:max_pred_time}.
 
 \begin{table}[!htb]
 \small\sf\centering
