--- a/report/clinical/supplementary/C_biopsy_scheduling.tex
+++ b/report/clinical/supplementary/C_biopsy_scheduling.tex
@@ -1,15 +1,52 @@
 % !TEX root =  ../supplementary.tex
 \section{Personalized Biopsies Based on Cause-Specific Cumulative Upgrading-Risk}
-Consider some real patients from the PRIAS database shown in Figure~\ref{fig:demo_pat1_supp}--~\ref{fig:demo_pat3_supp}. We intend to develop personalized schedule of biopsies for these patients. Using the joint model fitted to the PRIAS dataset, we first obtain their cause-specific cumulative upgrading-risk over the entire follow-up period (see Equation~\ref{eq:dynamic_risk_prob}), given their accumulated clinical data. Our aim is to employ this cumulative-risk function in the personalized biopsy schedule. However, in line with the protocols of most AS cohorts~\citep{nieboer2018active}, we first schedule a compulsory biopsy at year one of follow-up. This promises early detection of Gleason upgrade for patients misdiagnosed as low-grade cancer patients, or patients who chose AS despite having a higher grade at diagnosis. We also maintain a recommended minimum gap of one year between consecutive biopsies~\citep{bokhorst2015compliance}. Consequently, we schedule personalized biopsies starting from year two until year a maximum horizon (Table~\ref{tab:max_pred_time_repeat}). The added benefit of this approach is that due to the longitudinal measurements accumulated over two years, and year one biopsy results, we are able to make reasonably accurate predictions of the cause-specific cumulative upgrading-risk. 
+Consider some real patients from the PRIAS database shown in Figure~\ref{fig:demo_pat1_supp}--~\ref{fig:demo_pat3_supp}. In line with the protocols of most AS cohorts~\citep{nieboer2018active}, we first schedule a compulsory biopsy at year one of follow-up. This promises early detection of Gleason upgrade for patients misdiagnosed as low-grade cancer patients, or patients who chose AS despite having a higher grade at diagnosis. We also maintain a recommended minimum gap of one year between consecutive biopsies~\citep{bokhorst2015compliance}. That is, we intend to develop personalized schedule of biopsies for these patients starting from the second year. The added benefit of planning biopsies year two onwards is that due to the longitudinal measurements accumulated over two years, and year one biopsy results, we are able to make reasonably accurate predictions of the cause-specific cumulative upgrading-risk. 
 
-We next exploit PRIAS cohort's fixed schedule of longitudinal measurements ${L=\{2, 2.5 \ldots 6\}}$ between year two and six (horizon, Table~\ref{tab:max_pred_time_repeat}). More specifically, we schedule a biopsy at all those future visits where the conditional cause-specific cumulative upgrading-risk is larger than a certain threshold $0 \leq \kappa \leq 1$ (e.g., 10\% risk). The resulting personalized schedule of biopsies $B_j^{\kappa}$ is given by:
-\begin{equation}
-\label{eq:personalized_schedule}
+Using the joint model fitted to the PRIAS dataset, we first obtain a patient's cause-specific cumulative upgrading-risk over the entire future follow-up period (see~\ref{eq:dynamic_risk_prob}), given their accumulated two year clinical data. Typically biopsies may be decided on the same visit on which PSA is measured. Let $U={u_1, \ldots, u_L}$ represent a schedule of such visits (e.g., every six months in prostate cancer for PSA measurement), where $u_1=v$ is also the time of the current visit, and $u_L$ is the horizon up to which we intend to plan biopsies. Depending upon how much training/validation data is available, this horizon differs between cohorts (Table~\ref{tab:max_pred_time_repeat}). First, we make $L$ successive decisions for conducting biopsies on each of the $L$ future visit times $u_l \in U$. Specifically, we decide to conduct a biopsy at time $u_l$ if the conditional cumulative-risk of progression at $u_l$ is larger than a certain risk threshold $0 \leq \kappa \leq 1$ (e.g., $\kappa=10$\% risk). If a biopsy gets planned at time $u_l$, then the successive biopsy decision at time $u_{l+1}$ is made using an updated cumulative-risk profile. This updated cumulative-risk profile accounts for the possibility that progression may occur after time $u_l < T^*_j$. The biopsy decisions on each future visit time $u_l$ are defined as: 
+\begin{equation*}
+\label{eq:personalized_decision_grid}
 \begin{split}
-B_j^{\kappa} &= \Big\{b_{jk} \epsilon L \mid R_j(b_{jk} \mid b_{jk-1}, s) \geq \kappa \land (b_{jk}-b_{jk-1}\geq 1) \Big\},
+Q_j^{\kappa}(u_l \mid t_l, v) &= I\big\{R_j(u_l \mid t_l, v) \geq \kappa \big\},\\
+t_l &= \left\{\begin{array}{lcr}
+  t, &\mbox{if}& l=1\\
+  t_{l-1}, &\mbox{if}&  Q_j^{\kappa}(u_{l-1} \mid t_{l-1}, v)=0, l\geq 2\\ 
+  u_{l-1}, &\mbox{if}&  Q_j^{\kappa}(u_{l-1} \mid t_{l-1}, v)=1, l\geq 2\\
+\end{array} \right\}.
+\end{split}
+\end{equation*}
+The cumulative-risk $R_j(u_l \mid t_l, v)$ at future visit time $u_l$ utilizes the time $t_l$ as the time of the last conducted biopsy on which progression may not be observed. However, the contribution of the observed longitudinal data $\mathcal{Y}_{j}(v)$ in the risk function remains the same over all time points in $U$. The biopsy decision at time $u_l$ is denoted by ${Q_j^{\kappa}(u_l \mid t_l, v)}$. Via the indicator function $I(\cdot)$ it obtains a value 1 (or 0) when a biopsy is to be conducted (or not conducted) at time $u_l$. The subset of future time points in $U$ on which a biopsy is to be performed results into a personalized schedule of planned future biopsies, given by:
+\begin{equation}
+\label{eq:personalized_schedule_grid}
+S_j^{\kappa}(U \mid t, v) = \big\{ u_l \in U \mid Q_j^{\kappa}(u_l \mid t_l, v)=1\big\}.
+\end{equation}
+The personalized schedule in~(\ref{eq:personalized_schedule_grid}) is updated as more patient data becomes available over subsequent follow-up visits.
+
+\subsection{Expected Time Delay in Detecting Progression}
+\label{subsec:exp_delay_estimation}
+The schedule $S_j^{\kappa}(U \mid t, v)$ manifests a personalized biopsy plan for the $j$-the patient. However, the the time delay in detecting progression that may subsequently be observed, depends on the true time of progression $T^*_j$ of the patient. Since two different patients with the same timing of biopsies will expect different time delays, we estimate it in a patient-specific manner as well. Although, this calculation is not limited to personalized schedules only, but can be done for any schedule $S$ of biopsies with $N$ time points $S=\{s_n \mid n=1,\ldots, N\}$. 
+
+For each of the $N$ planned biopsies there exist $N$ possible time intervals ${s_{n-1} < T^*_j \leq s_n}$ in which progression may be observed. Correspondingly, there are $N$ possible time delays in detecting progression $s_n - T^*_j$. Given a schedule $S$, the true time delay in detecting progression $D_j$ that the patient will experience can be defined as:
+\begin{equation}
+\label{eq:number_of_biopsies_and_delay}
+\begin{split}
+D_j (S \mid t) &= \left\{ \begin{array}{lcrr}
+  s_1 - T^*_j, &\mbox{if}& t < T^*_j \leq s_1\\
+  \ldots \\
+  s_N - T^*_j, &\mbox{if}& s_{N-1} < T^*_j \leq s_N  
+\end{array} \right\}.
 \end{split}
 \end{equation}
-where $b_{jk}$ is the time of the $k$-th biopsy for the $j$-th patient and $b_{j0}$ corresponds to time of the last conducted biopsy before making this schedule. The conditional cause-specific cumulative upgrading-risk denoted by $R_j(b_{jk} \mid b_{jk-1}, s)$ is defined as in Equation~(\ref{eq:dynamic_risk_prob}). In this risk the contribution of the observed PSA $\mathcal{Y}_{j}(s)$ does not change while scheduling subsequent biopsies. However, the `conditional' part here is that successive $k$-th biopsy at time $b_{jk}$ is scheduled by accounting for the possibility that Gleason upgrade may not have occurred until the previously scheduled biopsy $T^*_j > b_{jk-1}$. The personalized schedule Equation~(\ref{eq:personalized_schedule}) is updated as more patient data becomes available over follow-up.
+The time delay is cannot be defined for the scenario in which the patient obtains progression after the time of the last biopsy in the schedule $T^*_j > s_N$. Hence, this delay should be interpreted as the delay that will be observed if the patient will experience upgrading before time of the last planned biopsy at $T^*_j\leq s_N$. To estimate the expected value of $D_j(\cdot)$ in a patient-specific manner, we exploit the personalized cumulative-risk profile of the patient defined in~(\ref{eq:dynamic_risk_prob}). Specifically, the expected time delay $E\{D_j(\cdot)\}$ can be calculated as the weighted sum of $N$ possible time delays defined in~(\ref{eq:number_of_biopsies_and_delay}). The $n$-th weight is equal to the probability of the patient obtaining progression in the $n$-th interval ${s_{n-1} < T^*_j \leq s_n}$.
+\begin{equation*}
+\label{eq:expected_number_of_biopsies_and_delay}
+\begin{split}
+E\big\{D_j(S \mid t)\big\} &= \sum_{n=1}^{N} \Big\{s_n - E(T^*_j \mid s_{n-1}, s_n, v)\Big\} \\ & \quad \times \mbox{Pr}\Big\{s_{n-1} < T^*_j \leq s_n \mid T^*_j \leq s_N, \mathcal(Y)_j(v), \mathcal{A}_n\Big\}, \quad s_0 = t\\
+E(T^*_j \mid s_{n-1}, s_n, v) &= s_{n-1} + \int_{s_{n-1}}^{s_n} \mbox{Pr}\Big\{T^*_j \geq u \mid s_{n-1} < T^*_j \leq s_n, \mathcal{Y}_{j}(v), \mathcal{A}_n\Big\} \mathrm{d}u,
+\end{split}
+\end{equation*}
+where $E(T^*_j \mid s_{n-1}, s_n, v)$ denotes the conditional expected time of progression for the scenario $s_{n-1} < T^*_j \leq s_n$, and is calculated as the area under the corresponding survival curve.
+
+The personalized expected time delay in detecting progression has the advantage that it is updated over follow-up as more patient data becomes available. Since it can be calculated for any schedule, patients and doctors can utilize it along with the plan of biopsies to compare schedules before making a decision. Although, in order to have a fair comparison of time delays between different schedules for the same patient, a compulsory biopsy at a common horizon time point should be planned in all schedules.
 
 \begin{table}[!htb]
 \small\sf\centering
@@ -30,16 +67,6 @@ UCSF & 8.5\\
 \hline
 \end{tabular}	
 \end{table}
-
-To assist patients in making an informed choice for a schedule, be it personalized or fixed, we provide them patient-specific consequences of following each schedule. To this end, we first calculate the probability of occurrence of upgrading between successive biopsies of each schedule. Using these probabilities we then obtain the expected delay in detection of upgrading for following that schedule. Thus, patients have a method to compare across various schedules in terms of the personalized burden (time and total biopsies), and personalized benefit (less delay in detection of upgrading is beneficial). Suppose once again that for patient $j$, the time of latest negative biopsy is $t$, and current visit time is $s > t$. Then equation for the expected delay $D_j(B \mid t,s)$ in detection of upgrading using schedule of biopsies $B = \{b_1, \ldots, b_h\}$, where $b_1 \geq s$, and $b_h$ is the horizon time (Table~\ref{tab:max_pred_time_repeat}) up to which we want to schedule biopsies, is given by:
-\begin{equation}
-\label{eq:expected_delay}
-\begin{split}
-D_j(B \mid t,s) &= \sum_{v=1}^{h} R_j(b_v\mid b_{v-1},s) \times  \Big\{b_{v} - b_{v-1} - \int_{b_{v-1}}^{b_v} S_j(u \mid b_v, b_{v-1}, s) \mathrm{d}u \Big\},\\
-S_j(u \mid b_v, b_{v-1}, s) &= \mbox{Pr}\big\{T^*_j > u \mid b_{v} \geq T^*_j > b_{v-1}, \mathcal{Y}_{j}(s), \mathcal{D}_n\big\}, \quad b_{v} \geq u > b_{v-1},
-\end{split}
-\end{equation}
-and $R_j(b_v\mid b_{v-1},s)$ is as defined in Equation~(\ref{eq:dynamic_risk_prob}). The personalized and fixed schedules, and their consequences for a few real patients from the PRIAS dataset are shown in Figure~\ref{fig:demo_pat1_supp} to Figure~\ref{fig:demo_pat3_supp}. A compulsory biopsy was done at horizon $b_h$ of follow-up in all schedules for meaningful comparison of their expected delays in detection of upgrading.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/demo_pat1_supp.eps}}
